@@ -24,19 +24,17 @@
  */
 package com.oracle.svm.core.jdk;
 
-import org.graalvm.compiler.serviceprovider.GraalUnsafeAccess;
 import org.graalvm.word.Pointer;
 import org.graalvm.word.PointerBase;
 import org.graalvm.word.UnsignedWord;
 import org.graalvm.word.WordBase;
 import org.graalvm.word.WordFactory;
 
-import com.oracle.svm.core.annotate.Uninterruptible;
+import com.oracle.svm.core.Uninterruptible;
+import com.oracle.svm.core.jdk.JavaLangSubstitutions.StringUtil;
 import com.oracle.svm.core.util.VMError;
 
-// Checkstyle: stop
-import sun.misc.Unsafe;
-// Checkstyle: resume
+import jdk.internal.misc.Unsafe;
 
 /**
  * Annotated replacements to be called from uninterruptible code for methods whose source I do not
@@ -47,9 +45,44 @@ import sun.misc.Unsafe;
  */
 public class UninterruptibleUtils {
 
+    public static class AtomicBoolean {
+
+        private static final Unsafe UNSAFE = Unsafe.getUnsafe();
+        private static final long VALUE_OFFSET;
+
+        static {
+            try {
+                VALUE_OFFSET = UNSAFE.objectFieldOffset(AtomicBoolean.class.getDeclaredField("value"));
+            } catch (Throwable ex) {
+                throw VMError.shouldNotReachHere(ex);
+            }
+        }
+
+        private volatile boolean value;
+
+        public AtomicBoolean(boolean value) {
+            this.value = value;
+        }
+
+        @Uninterruptible(reason = "Called from uninterruptible code.", mayBeInlined = true)
+        public boolean get() {
+            return value;
+        }
+
+        @Uninterruptible(reason = "Called from uninterruptible code.", mayBeInlined = true)
+        public void set(boolean newValue) {
+            value = newValue;
+        }
+
+        @Uninterruptible(reason = "Called from uninterruptible code.", mayBeInlined = true)
+        public boolean compareAndSet(boolean expected, boolean update) {
+            return UNSAFE.compareAndSetBoolean(this, VALUE_OFFSET, expected, update);
+        }
+    }
+
     public static class AtomicInteger {
 
-        private static final Unsafe UNSAFE = GraalUnsafeAccess.getUnsafe();
+        private static final Unsafe UNSAFE = Unsafe.getUnsafe();
         private static final long VALUE_OFFSET;
 
         static {
@@ -93,13 +126,13 @@ public class UninterruptibleUtils {
 
         @Uninterruptible(reason = "Called from uninterruptible code.", mayBeInlined = true)
         public boolean compareAndSet(int expected, int update) {
-            return UNSAFE.compareAndSwapInt(this, VALUE_OFFSET, expected, update);
+            return UNSAFE.compareAndSetInt(this, VALUE_OFFSET, expected, update);
         }
     }
 
     public static class AtomicLong {
 
-        private static final Unsafe UNSAFE = GraalUnsafeAccess.getUnsafe();
+        private static final Unsafe UNSAFE = Unsafe.getUnsafe();
         private static final long VALUE_OFFSET;
 
         static {
@@ -163,7 +196,7 @@ public class UninterruptibleUtils {
 
         @Uninterruptible(reason = "Called from uninterruptible code.", mayBeInlined = true)
         public boolean compareAndSet(long expected, long update) {
-            return UNSAFE.compareAndSwapLong(this, VALUE_OFFSET, expected, update);
+            return UNSAFE.compareAndSetLong(this, VALUE_OFFSET, expected, update);
         }
     }
 
@@ -290,7 +323,7 @@ public class UninterruptibleUtils {
 
     public static class AtomicPointer<T extends PointerBase> {
 
-        private static final Unsafe UNSAFE = GraalUnsafeAccess.getUnsafe();
+        private static final Unsafe UNSAFE = Unsafe.getUnsafe();
         private static final long VALUE_OFFSET;
 
         static {
@@ -315,13 +348,13 @@ public class UninterruptibleUtils {
 
         @Uninterruptible(reason = "Called from uninterruptible code.", mayBeInlined = true)
         public boolean compareAndSet(T expected, T update) {
-            return UNSAFE.compareAndSwapLong(this, VALUE_OFFSET, expected.rawValue(), update.rawValue());
+            return UNSAFE.compareAndSetLong(this, VALUE_OFFSET, expected.rawValue(), update.rawValue());
         }
     }
 
     public static class AtomicReference<T> {
 
-        private static final Unsafe UNSAFE = GraalUnsafeAccess.getUnsafe();
+        private static final Unsafe UNSAFE = Unsafe.getUnsafe();
         private static final long VALUE_OFFSET;
 
         static {
@@ -353,7 +386,7 @@ public class UninterruptibleUtils {
 
         @Uninterruptible(reason = "Called from uninterruptible code.", mayBeInlined = true)
         public boolean compareAndSet(T expected, T update) {
-            return UNSAFE.compareAndSwapObject(this, VALUE_OFFSET, expected, update);
+            return UNSAFE.compareAndSetObject(this, VALUE_OFFSET, expected, update);
         }
 
         @Uninterruptible(reason = "Called from uninterruptible code.", mayBeInlined = true)
@@ -368,6 +401,11 @@ public class UninterruptibleUtils {
 
         @Uninterruptible(reason = "Called from uninterruptible code.", mayBeInlined = true)
         public static int min(int a, int b) {
+            return (a <= b) ? a : b;
+        }
+
+        @Uninterruptible(reason = "Called from uninterruptible code.", mayBeInlined = true)
+        public static long min(long a, long b) {
             return (a <= b) ? a : b;
         }
 
@@ -387,8 +425,21 @@ public class UninterruptibleUtils {
         }
 
         @Uninterruptible(reason = "Called from uninterruptible code.", mayBeInlined = true)
+        public static int abs(int a) {
+            return (a < 0) ? -a : a;
+        }
+
+        @Uninterruptible(reason = "Called from uninterruptible code.", mayBeInlined = true)
         public static long abs(long a) {
             return (a < 0) ? -a : a;
+        }
+    }
+
+    public static class Byte {
+        @Uninterruptible(reason = "Called from uninterruptible code.", mayBeInlined = true)
+        @SuppressWarnings("cast")
+        public static int toUnsignedInt(byte x) {
+            return ((int) x) & 0xff;
         }
     }
 
@@ -413,6 +464,11 @@ public class UninterruptibleUtils {
            // @formatter:on
         }
         // Checkstyle: resume
+
+        @Uninterruptible(reason = "Called from uninterruptible code.", mayBeInlined = true)
+        public static int hashCode(long value) {
+            return (int) (value ^ (value >>> 32));
+        }
     }
 
     public static class Integer {
@@ -512,27 +568,21 @@ public class UninterruptibleUtils {
          */
         @Uninterruptible(reason = "Called from uninterruptible code.", mayBeInlined = true)
         public static int modifiedUTF8Length(java.lang.String string, boolean addNullTerminator) {
+            return modifiedUTF8Length(string, addNullTerminator, null);
+        }
+
+        @Uninterruptible(reason = "Called from uninterruptible code.", mayBeInlined = true)
+        public static int modifiedUTF8Length(java.lang.String string, boolean addNullTerminator, CharReplacer replacer) {
             int result = 0;
-            boolean isLatin1 = JavaLangSubstitutions.isLatin1(string);
-            byte[] value = JavaLangSubstitutions.getBytes(string);
             for (int index = 0; index < string.length(); index++) {
-                char ch = charAt(isLatin1, value, index);
+                char ch = StringUtil.charAt(string, index);
+                if (replacer != null) {
+                    ch = replacer.replace(ch);
+                }
                 result += modifiedUTF8Length(ch);
             }
 
             return result + (addNullTerminator ? 1 : 0);
-        }
-
-        /**
-         * Returns a character from a string at {@code index} position based on the encoding format.
-         */
-        @Uninterruptible(reason = "Called from uninterruptible code.", mayBeInlined = true)
-        public static char charAt(boolean isLatin1, byte[] value, int index) {
-            if (isLatin1) {
-                return (char) (value[index] & 0xFF);
-            } else {
-                return Target_java_lang_StringUTF16.getChar(value, index);
-            }
         }
 
         /**
@@ -544,11 +594,18 @@ public class UninterruptibleUtils {
          */
         @Uninterruptible(reason = "Called from uninterruptible code.", mayBeInlined = true)
         public static Pointer toModifiedUTF8(java.lang.String string, Pointer buffer, Pointer bufferEnd, boolean addNullTerminator) {
+            return toModifiedUTF8(string, buffer, bufferEnd, addNullTerminator, null);
+        }
+
+        @Uninterruptible(reason = "Called from uninterruptible code.", mayBeInlined = true)
+        public static Pointer toModifiedUTF8(java.lang.String string, Pointer buffer, Pointer bufferEnd, boolean addNullTerminator, CharReplacer replacer) {
             Pointer pos = buffer;
-            boolean isLatin1 = JavaLangSubstitutions.isLatin1(string);
-            byte[] value = JavaLangSubstitutions.getBytes(string);
             for (int index = 0; index < string.length(); index++) {
-                pos = writeModifiedUTF8(pos, charAt(isLatin1, value, index));
+                char ch = StringUtil.charAt(string, index);
+                if (replacer != null) {
+                    ch = replacer.replace(ch);
+                }
+                pos = writeModifiedUTF8(pos, ch);
             }
 
             if (addNullTerminator) {
@@ -558,5 +615,11 @@ public class UninterruptibleUtils {
             VMError.guarantee(pos.belowOrEqual(bufferEnd), "Must not write out of bounds.");
             return pos;
         }
+    }
+
+    @FunctionalInterface
+    public interface CharReplacer {
+        @Uninterruptible(reason = "Called from uninterruptible code.", mayBeInlined = true)
+        char replace(char val);
     }
 }
