@@ -28,32 +28,50 @@ package com.oracle.svm.hosted;
 import static com.oracle.svm.core.jdk.Resources.RESOURCES_INTERNAL_PATH_SEPARATOR;
 
 import java.io.InputStream;
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Method;
+import java.lang.reflect.Modifier;
+import java.net.URI;
 import java.nio.file.FileSystem;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.HashSet;
+import java.util.List;
 import java.util.Locale;
-import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.Executors;
+import java.util.concurrent.ScheduledExecutorService;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.LongAdder;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
+import org.graalvm.compiler.api.replacements.SnippetReflectionProvider;
 import org.graalvm.compiler.debug.DebugContext;
+import org.graalvm.compiler.nodes.ValueNode;
+import org.graalvm.compiler.nodes.graphbuilderconf.GraphBuilderConfiguration;
+import org.graalvm.compiler.nodes.graphbuilderconf.GraphBuilderContext;
+import org.graalvm.compiler.nodes.graphbuilderconf.InvocationPlugin;
+import org.graalvm.compiler.nodes.graphbuilderconf.InvocationPlugins;
 import org.graalvm.compiler.options.Option;
 import org.graalvm.compiler.options.OptionType;
+import org.graalvm.compiler.phases.util.Providers;
 import org.graalvm.nativeimage.ImageSingletons;
-import org.graalvm.nativeimage.hosted.Feature;
+import org.graalvm.nativeimage.hosted.RuntimeResourceAccess;
 import org.graalvm.nativeimage.impl.ConfigurationCondition;
+import org.graalvm.nativeimage.impl.RuntimeResourceSupport;
 
 import com.oracle.svm.core.ClassLoaderSupport;
 import com.oracle.svm.core.ClassLoaderSupport.ResourceCollector;
+import com.oracle.svm.core.ParsingReason;
 import com.oracle.svm.core.SubstrateUtil;
-import com.oracle.svm.core.annotate.AutomaticFeature;
 import com.oracle.svm.core.configure.ConfigurationFile;
 import com.oracle.svm.core.configure.ConfigurationFiles;
 import com.oracle.svm.core.configure.ResourceConfigurationParser;
 import com.oracle.svm.core.configure.ResourcesRegistry;
+import com.oracle.svm.core.feature.AutomaticallyRegisteredFeature;
+import com.oracle.svm.core.feature.InternalFeature;
 import com.oracle.svm.core.jdk.Resources;
 import com.oracle.svm.core.jdk.resources.NativeImageResourceFileAttributes;
 import com.oracle.svm.core.jdk.resources.NativeImageResourceFileAttributesView;
@@ -66,6 +84,10 @@ import com.oracle.svm.core.util.VMError;
 import com.oracle.svm.hosted.FeatureImpl.DuringAnalysisAccessImpl;
 import com.oracle.svm.hosted.config.ConfigurationParserUtils;
 import com.oracle.svm.hosted.jdk.localization.LocalizationFeature;
+import com.oracle.svm.util.LogUtils;
+import com.oracle.svm.util.ReflectionUtil;
+
+import jdk.vm.ci.meta.ResolvedJavaMethod;
 
 /**
  * <p>
@@ -95,15 +117,17 @@ import com.oracle.svm.hosted.jdk.localization.LocalizationFeature;
  * @see NativeImageResourceFileAttributes
  * @see NativeImageResourceFileAttributesView
  */
-@AutomaticFeature
-public final class ResourcesFeature implements Feature {
+@AutomaticallyRegisteredFeature
+public final class ResourcesFeature implements InternalFeature {
+
+    static final String MODULE_NAME_ALL_UNNAMED = "ALL-UNNAMED";
 
     public static class Options {
         @Option(help = "Regexp to match names of resources to be included in the image.", type = OptionType.User)//
-        public static final HostedOptionKey<LocatableMultiOptionValue.Strings> IncludeResources = new HostedOptionKey<>(new LocatableMultiOptionValue.Strings());
+        public static final HostedOptionKey<LocatableMultiOptionValue.Strings> IncludeResources = new HostedOptionKey<>(LocatableMultiOptionValue.Strings.build());
 
         @Option(help = "Regexp to match names of resources to be excluded from the image.", type = OptionType.User)//
-        public static final HostedOptionKey<LocatableMultiOptionValue.Strings> ExcludeResources = new HostedOptionKey<>(new LocatableMultiOptionValue.Strings());
+        public static final HostedOptionKey<LocatableMultiOptionValue.Strings> ExcludeResources = new HostedOptionKey<>(LocatableMultiOptionValue.Strings.build());
     }
 
     private boolean sealed = false;
@@ -112,10 +136,8 @@ public final class ResourcesFeature implements Feature {
     private int loadedConfigurations;
     private ImageClassLoader imageClassLoader;
 
-    public final Set<String> includedResourcesModules = new HashSet<>();
-
     private class ResourcesRegistryImpl extends ConditionalConfigurationRegistry implements ResourcesRegistry {
-        private ConfigurationTypeResolver configurationTypeResolver;
+        private final ConfigurationTypeResolver configurationTypeResolver;
 
         ResourcesRegistryImpl(ConfigurationTypeResolver configurationTypeResolver) {
             this.configurationTypeResolver = configurationTypeResolver;
@@ -123,7 +145,7 @@ public final class ResourcesFeature implements Feature {
 
         @Override
         public void addResources(ConfigurationCondition condition, String pattern) {
-            if (configurationTypeResolver.resolveType(condition.getTypeName()) == null) {
+            if (configurationTypeResolver.resolveConditionType(condition.getTypeName()) == null) {
                 return;
             }
             registerConditionalConfiguration(condition, () -> {
@@ -133,8 +155,13 @@ public final class ResourcesFeature implements Feature {
         }
 
         @Override
+        public void injectResource(Module module, String resourcePath, byte[] resourceContent) {
+            Resources.registerResource(module, resourcePath, resourceContent);
+        }
+
+        @Override
         public void ignoreResources(ConfigurationCondition condition, String pattern) {
-            if (configurationTypeResolver.resolveType(condition.getTypeName()) == null) {
+            if (configurationTypeResolver.resolveConditionType(condition.getTypeName()) == null) {
                 return;
             }
             registerConditionalConfiguration(condition, () -> {
@@ -146,7 +173,7 @@ public final class ResourcesFeature implements Feature {
 
         @Override
         public void addResourceBundles(ConfigurationCondition condition, String name) {
-            if (configurationTypeResolver.resolveType(condition.getTypeName()) == null) {
+            if (configurationTypeResolver.resolveConditionType(condition.getTypeName()) == null) {
                 return;
             }
             registerConditionalConfiguration(condition, () -> ImageSingletons.lookup(LocalizationFeature.class).prepareBundle(name));
@@ -154,7 +181,7 @@ public final class ResourcesFeature implements Feature {
 
         @Override
         public void addClassBasedResourceBundle(ConfigurationCondition condition, String basename, String className) {
-            if (configurationTypeResolver.resolveType(condition.getTypeName()) == null) {
+            if (configurationTypeResolver.resolveConditionType(condition.getTypeName()) == null) {
                 return;
             }
             registerConditionalConfiguration(condition, () -> ImageSingletons.lookup(LocalizationFeature.class).prepareClassResourceBundle(basename, className));
@@ -162,7 +189,7 @@ public final class ResourcesFeature implements Feature {
 
         @Override
         public void addResourceBundles(ConfigurationCondition condition, String basename, Collection<Locale> locales) {
-            if (configurationTypeResolver.resolveType(condition.getTypeName()) == null) {
+            if (configurationTypeResolver.resolveConditionType(condition.getTypeName()) == null) {
                 return;
             }
             registerConditionalConfiguration(condition, () -> ImageSingletons.lookup(LocalizationFeature.class).prepareBundle(basename, locales));
@@ -173,8 +200,9 @@ public final class ResourcesFeature implements Feature {
     public void afterRegistration(AfterRegistrationAccess a) {
         FeatureImpl.AfterRegistrationAccessImpl access = (FeatureImpl.AfterRegistrationAccessImpl) a;
         imageClassLoader = access.getImageClassLoader();
-        ImageSingletons.add(ResourcesRegistry.class,
-                        new ResourcesRegistryImpl(new ConfigurationTypeResolver("resource configuration", imageClassLoader, NativeImageOptions.AllowIncompleteClasspath.getValue())));
+        ResourcesRegistryImpl resourcesRegistry = new ResourcesRegistryImpl(new ConfigurationTypeResolver("resource configuration", imageClassLoader));
+        ImageSingletons.add(ResourcesRegistry.class, resourcesRegistry);
+        ImageSingletons.add(RuntimeResourceSupport.class, resourcesRegistry);
     }
 
     private static ResourcesRegistryImpl resourceRegistryImpl() {
@@ -197,22 +225,61 @@ public final class ResourcesFeature implements Feature {
         private final DebugContext debugContext;
         private final ResourcePattern[] includePatterns;
         private final ResourcePattern[] excludePatterns;
-        private final Set<String> includedResourcesModules;
 
-        private ResourceCollectorImpl(DebugContext debugContext, ResourcePattern[] includePatterns, ResourcePattern[] excludePatterns, Set<String> includedResourcesModules) {
+        private static final int WATCHDOG_RESET_AFTER_EVERY_N_RESOURCES = 1000;
+        private static final int WATCHDOG_INITIAL_WARNING_AFTER_N_SECONDS = 60;
+        private static final int WATCHDOG_WARNING_AFTER_EVERY_N_SECONDS = 20;
+        private final Runnable heartbeatCallback;
+        private final LongAdder reachedResourceEntries;
+        private boolean initialReport;
+        private volatile String currentlyProcessedEntry;
+        ScheduledExecutorService scheduledExecutor;
+
+        private ResourceCollectorImpl(DebugContext debugContext, ResourcePattern[] includePatterns, ResourcePattern[] excludePatterns, Runnable heartbeatCallback) {
             this.debugContext = debugContext;
             this.includePatterns = includePatterns;
             this.excludePatterns = excludePatterns;
-            this.includedResourcesModules = includedResourcesModules;
+
+            this.heartbeatCallback = heartbeatCallback;
+            this.reachedResourceEntries = new LongAdder();
+            this.initialReport = true;
+            this.currentlyProcessedEntry = null;
+        }
+
+        private void prepareProgressReporter() {
+            this.scheduledExecutor = Executors.newSingleThreadScheduledExecutor();
+            scheduledExecutor.scheduleAtFixedRate(() -> {
+                if (initialReport) {
+                    initialReport = false;
+                    LogUtils.warning("Resource scanning is taking a long time. " +
+                                    "This can be caused by class-path or module-path entries that point to large directory structures. " +
+                                    "Please make sure class-/module-path entries are easily accessible to native-image");
+                }
+                System.out.println("Total scanned entries: " + this.reachedResourceEntries + "," +
+                                " current entry: " + (this.currentlyProcessedEntry != null ? this.currentlyProcessedEntry : "Unknown resource"));
+            }, WATCHDOG_INITIAL_WARNING_AFTER_N_SECONDS, WATCHDOG_WARNING_AFTER_EVERY_N_SECONDS, TimeUnit.SECONDS);
+        }
+
+        private void shutDownProgressReporter() {
+            if (!this.scheduledExecutor.isShutdown()) {
+                this.scheduledExecutor.shutdown();
+            }
         }
 
         @Override
-        public boolean isIncluded(String moduleName, String resourceName) {
-            VMError.guarantee(!resourceName.contains("\\"), "Resource path contains backslash!");
+        public boolean isIncluded(Module module, String resourceName, URI resource) {
+            this.currentlyProcessedEntry = resource.getScheme().equals("jrt") ? (resource + "/" + resourceName) : resource.toString();
+
+            this.reachedResourceEntries.increment();
+            if (this.reachedResourceEntries.longValue() % WATCHDOG_RESET_AFTER_EVERY_N_RESOURCES == 0) {
+                this.heartbeatCallback.run();
+            }
+
             String relativePathWithTrailingSlash = resourceName + RESOURCES_INTERNAL_PATH_SEPARATOR;
+            String moduleName = module == null ? null : module.getName();
 
             for (ResourcePattern rp : excludePatterns) {
-                if (rp.moduleName != null && !rp.moduleName.equals(moduleName)) {
+                if (!rp.moduleNameMatches(moduleName)) {
                     continue;
                 }
                 if (rp.pattern.matcher(resourceName).matches() || rp.pattern.matcher(relativePathWithTrailingSlash).matches()) {
@@ -221,7 +288,7 @@ public final class ResourcesFeature implements Feature {
             }
 
             for (ResourcePattern rp : includePatterns) {
-                if (rp.moduleName != null && !rp.moduleName.equals(moduleName)) {
+                if (!rp.moduleNameMatches(moduleName)) {
                     continue;
                 }
                 if (rp.pattern.matcher(resourceName).matches() || rp.pattern.matcher(relativePathWithTrailingSlash).matches()) {
@@ -233,21 +300,13 @@ public final class ResourcesFeature implements Feature {
         }
 
         @Override
-        public void addResource(String moduleName, String resourceName, InputStream resourceStream) {
-            collectModuleName(moduleName);
-            registerResource(debugContext, moduleName, resourceName, resourceStream);
+        public void addResource(Module module, String resourceName, InputStream resourceStream, boolean fromJar) {
+            registerResource(debugContext, module, resourceName, resourceStream, fromJar);
         }
 
         @Override
-        public void addDirectoryResource(String moduleName, String dir, String content) {
-            collectModuleName(moduleName);
-            registerDirectoryResource(debugContext, moduleName, dir, content);
-        }
-
-        private void collectModuleName(String moduleName) {
-            if (moduleName != null) {
-                includedResourcesModules.add(moduleName);
-            }
+        public void addDirectoryResource(Module module, String dir, String content, boolean fromJar) {
+            registerDirectoryResource(debugContext, module, dir, content, fromJar);
         }
     }
 
@@ -260,13 +319,17 @@ public final class ResourcesFeature implements Feature {
 
         access.requireAnalysisIteration();
 
-        DebugContext debugContext = ((DuringAnalysisAccessImpl) access).getDebugContext();
+        DuringAnalysisAccessImpl duringAnalysisAccess = ((DuringAnalysisAccessImpl) access);
         ResourcePattern[] includePatterns = compilePatterns(resourcePatternWorkSet);
         ResourcePattern[] excludePatterns = compilePatterns(excludedResourcePatterns);
-        ResourceCollectorImpl collector = new ResourceCollectorImpl(debugContext, includePatterns, excludePatterns, includedResourcesModules);
-
-        ImageSingletons.lookup(ClassLoaderSupport.class).collectResources(collector);
-
+        DebugContext debugContext = duringAnalysisAccess.getDebugContext();
+        ResourceCollectorImpl collector = new ResourceCollectorImpl(debugContext, includePatterns, excludePatterns, duringAnalysisAccess.bb.getHeartbeatCallback());
+        try {
+            collector.prepareProgressReporter();
+            ImageSingletons.lookup(ClassLoaderSupport.class).collectResources(collector);
+        } finally {
+            collector.shutDownProgressReporter();
+        }
         resourcePatternWorkSet.clear();
     }
 
@@ -274,7 +337,7 @@ public final class ResourcesFeature implements Feature {
         return patterns.stream()
                         .filter(s -> s.length() > 0)
                         .map(this::makeResourcePattern)
-                        .collect(Collectors.toList())
+                        .toList()
                         .toArray(new ResourcePattern[]{});
     }
 
@@ -283,11 +346,12 @@ public final class ResourcesFeature implements Feature {
         if (moduleNameWithPattern.length < 2) {
             return new ResourcePattern(null, Pattern.compile(moduleNameWithPattern[0]));
         } else {
-            Optional<? extends Object> optModule = imageClassLoader.findModule(moduleNameWithPattern[0]);
-            if (optModule.isPresent()) {
-                return new ResourcePattern(moduleNameWithPattern[0], Pattern.compile(moduleNameWithPattern[1]));
+            String moduleName = moduleNameWithPattern[0];
+            boolean acceptModuleName = MODULE_NAME_ALL_UNNAMED.equals(moduleName) ? true : imageClassLoader.findModule(moduleName).isPresent();
+            if (acceptModuleName) {
+                return new ResourcePattern(moduleName, Pattern.compile(moduleNameWithPattern[1]));
             } else {
-                throw UserError.abort("Resource pattern \"" + rawPattern + "\"s specifies unknown module " + moduleNameWithPattern[0]);
+                throw UserError.abort("Resource pattern \"" + rawPattern + "\"s specifies unknown module " + moduleName);
             }
         }
     }
@@ -299,6 +363,18 @@ public final class ResourcesFeature implements Feature {
         private ResourcePattern(String moduleName, Pattern pattern) {
             this.moduleName = moduleName;
             this.pattern = pattern;
+        }
+
+        boolean moduleNameMatches(String resourceContainerModuleName) {
+            if (moduleName == null) {
+                // Accept everything
+                return true;
+            }
+            if (moduleName.equals(MODULE_NAME_ALL_UNNAMED)) {
+                // Only accept if resource is from classpath
+                return resourceContainerModuleName == null;
+            }
+            return moduleName.equals(resourceContainerModuleName);
         }
     }
 
@@ -319,20 +395,67 @@ public final class ResourcesFeature implements Feature {
     }
 
     @SuppressWarnings("try")
-    private static void registerResource(DebugContext debugContext, String moduleName, String resourceName, InputStream resourceStream) {
+    private static void registerResource(DebugContext debugContext, Module module, String resourceName, InputStream resourceStream, boolean fromJar) {
         try (DebugContext.Scope s = debugContext.scope("registerResource")) {
-            String moduleNamePrefix = moduleName == null ? "" : moduleName + ":";
+            String moduleNamePrefix = module == null ? "" : module.getName() + ":";
             debugContext.log(DebugContext.VERBOSE_LEVEL, "ResourcesFeature: registerResource: %s%s", moduleNamePrefix, resourceName);
-            Resources.registerResource(moduleName, resourceName, resourceStream);
+            Resources.registerResource(module, resourceName, resourceStream, fromJar);
         }
     }
 
     @SuppressWarnings("try")
-    private static void registerDirectoryResource(DebugContext debugContext, String moduleName, String dir, String content) {
+    private static void registerDirectoryResource(DebugContext debugContext, Module module, String dir, String content, boolean fromJar) {
         try (DebugContext.Scope s = debugContext.scope("registerResource")) {
-            String moduleNamePrefix = moduleName == null ? "" : moduleName + ":";
-            debugContext.log(DebugContext.VERBOSE_LEVEL, "ResourcesFeature: registerResource: %s%s", moduleNamePrefix, moduleName, dir);
-            Resources.registerDirectoryResource(moduleName, dir, content);
+            String moduleNamePrefix = module == null ? "" : module.getName() + ":";
+            debugContext.log(DebugContext.VERBOSE_LEVEL, "ResourcesFeature: registerResource: %s%s", moduleNamePrefix, dir);
+            Resources.registerDirectoryResource(module, dir, content, fromJar);
         }
+    }
+
+    @Override
+    public void registerInvocationPlugins(Providers providers, SnippetReflectionProvider snippetReflection, GraphBuilderConfiguration.Plugins plugins, ParsingReason reason) {
+        if (!reason.duringAnalysis() || reason == ParsingReason.JITCompilation) {
+            return;
+        }
+
+        Method[] resourceMethods = {
+                        ReflectionUtil.lookupMethod(Class.class, "getResource", String.class),
+                        ReflectionUtil.lookupMethod(Class.class, "getResourceAsStream", String.class)
+        };
+        Method resolveResourceName = ReflectionUtil.lookupMethod(Class.class, "resolveName", String.class);
+
+        for (Method method : resourceMethods) {
+            registerResourceRegistrationPlugin(plugins.getInvocationPlugins(), method, snippetReflection, resolveResourceName, reason);
+        }
+    }
+
+    private void registerResourceRegistrationPlugin(InvocationPlugins plugins, Method method, SnippetReflectionProvider snippetReflectionProvider, Method resolveResourceName, ParsingReason reason) {
+        List<Class<?>> parameterTypes = new ArrayList<>();
+        assert !Modifier.isStatic(method.getModifiers());
+        parameterTypes.add(InvocationPlugin.Receiver.class);
+        parameterTypes.addAll(Arrays.asList(method.getParameterTypes()));
+
+        plugins.register(method.getDeclaringClass(), new InvocationPlugin.RequiredInvocationPlugin(method.getName(), parameterTypes.toArray(new Class<?>[0])) {
+            @Override
+            public boolean isDecorator() {
+                return true;
+            }
+
+            @Override
+            public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode arg) {
+                try {
+                    if (!sealed && receiver.isConstant() && arg.isJavaConstant() && !arg.isNullConstant()) {
+                        Class<?> clazz = snippetReflectionProvider.asObject(Class.class, receiver.get().asJavaConstant());
+                        String resource = snippetReflectionProvider.asObject(String.class, arg.asJavaConstant());
+                        String resourceName = (String) resolveResourceName.invoke(clazz, resource);
+                        b.add(ReachabilityRegistrationNode.create(() -> RuntimeResourceAccess.addResource(clazz.getModule(), resourceName), reason));
+                        return true;
+                    }
+                } catch (IllegalAccessException | InvocationTargetException e) {
+                    throw VMError.shouldNotReachHere(e);
+                }
+                return false;
+            }
+        });
     }
 }
