@@ -36,7 +36,9 @@ import java.util.stream.Collectors;
 import org.graalvm.nativeimage.hosted.Feature;
 import org.graalvm.nativeimage.hosted.RuntimeClassInitialization;
 
-import sun.misc.Unsafe;
+import com.oracle.svm.util.ModuleSupport;
+
+import jdk.internal.misc.Unsafe;
 
 class PureMustBeSafeEarly {
     static int v;
@@ -445,6 +447,26 @@ class DevirtualizedCallUsageMustBeDelayed {
     }
 }
 
+class LargeAllocation1MustBeDelayed {
+    static final Object value = computeValue();
+
+    private static Object computeValue() {
+        Object[] result = new Object[1_000_000];
+        for (int i = 0; i < result.length; i++) {
+            result[i] = new int[1_000_000];
+        }
+        return result;
+    }
+}
+
+class LargeAllocation2MustBeDelayed {
+    static final Object value = computeValue();
+
+    private static Object computeValue() {
+        return new int[Integer.MAX_VALUE][Integer.MAX_VALUE];
+    }
+}
+
 class TestClassInitializationMustBeSafeEarlyFeature implements Feature {
 
     static final Class<?>[] checkedClasses = new Class<?>[]{
@@ -477,7 +499,8 @@ class TestClassInitializationMustBeSafeEarlyFeature implements Feature {
                     ReferencesOtherPureClassMustBeSafeEarly.class, HelperClassMustBeSafeEarly.class,
                     CycleMustBeSafeLate.class, HelperClassMustBeSafeLate.class,
                     ReflectionMustBeSafeEarly.class, ForNameMustBeSafeEarly.class, ForNameMustBeDelayed.class,
-                    DevirtualizedCallMustBeDelayed.class, DevirtualizedCallSuperMustBeSafeEarly.class, DevirtualizedCallSubMustBeSafeEarly.class, DevirtualizedCallUsageMustBeDelayed.class
+                    DevirtualizedCallMustBeDelayed.class, DevirtualizedCallSuperMustBeSafeEarly.class, DevirtualizedCallSubMustBeSafeEarly.class, DevirtualizedCallUsageMustBeDelayed.class,
+                    LargeAllocation1MustBeDelayed.class, LargeAllocation2MustBeDelayed.class,
     };
 
     private static void checkClasses(boolean checkSafeEarly, boolean checkSafeLate) {
@@ -520,6 +543,9 @@ class TestClassInitializationMustBeSafeEarlyFeature implements Feature {
     @Override
     public void afterRegistration(AfterRegistrationAccess access) {
         RuntimeClassInitialization.initializeAtRunTime("com.oracle.svm.test.clinit");
+
+        ModuleSupport.accessPackagesToClass(ModuleSupport.Access.OPEN, TestClassInitializationMustBeSafeEarly.class, false,
+                        "java.base", "jdk.internal.misc");
         RuntimeClassInitialization.initializeAtBuildTime(UnsafeAccess.class);
     }
 
@@ -655,6 +681,15 @@ public class TestClassInitializationMustBeSafeEarly {
         assertSame("field", ReflectionMustBeSafeEarly.f2.getName());
 
         System.out.println(DevirtualizedCallUsageMustBeDelayed.value);
+
+        if (System.currentTimeMillis() == 0) {
+            /*
+             * Make the class initializers reachable at run time, but do not actually execute them
+             * because they will allocate a lot of memory before throwing an OutOfMemoryError.
+             */
+            System.out.println(LargeAllocation1MustBeDelayed.value);
+            System.out.println(LargeAllocation2MustBeDelayed.value);
+        }
     }
 
     private static void assertSame(Object expected, Object actual) {
